[package]
name        = "dom-wallet2"
description = "DOM protocol — wallet v2 persistent store (StoredOutput source of truth, status-only reconciliation). Coexists with dom-wallet v1."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true

[dependencies]
# Security & serialization (store types since 3A).
zeroize.workspace   = true
serde.workspace     = true
thiserror.workspace = true

# At-rest persistence (3C): the shared, audited encrypted-file envelope + KDF.
# Same crate v1 uses (extracted in PR #71) — single source for the on-disk
# crypto that guards the blinding factors.
dom-wallet-crypto.workspace = true

# Protocol crates from the allowed set (dom-slate, dom-tx, dom-crypto, dom-core)
# are wired in as later sub-steps require them (e.g. transport feeding the
# reconciler). Per the "o necessário" rule, only the deps the current code
# exercises are declared.

[dev-dependencies]
tempfile.workspace = true
